# SlicerIGSpineDeformity

./: CMakeLists.txt  LICENSE  README.md
sl_01__LaminaLandmark_Labeling/: sl_01__LaminaLandmark_Labeling.py
sl_01__LaminaLandmark_Labeling/Resources/UI/: sl_01__LaminaLandmark_Labeling.ui
